dev/init-manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: test-argocd-ingress
  namespace: test-argocd-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "bozo-letsencrypt-issuer"
spec:
  tls:
    - hosts:
      - bozobooks.com
      secretName: bozo-letsencrypt-issuer-dev
  rules:
  - host: bozobooks.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  book-library-ui-svc
            port: 
              number: 80
      - path: /bookinfo
        pathType: Prefix
        backend:
          service:
            name:  book-info-service-svc
            port: 
              number: 8080
      - path: /booklib
        pathType: Prefix
        backend:
          service:
            name:  book-library-service-svc
            port: 
              number: 8080
